--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+server.port=8088
+#logging.level.org.springframework=DEBUG
+spring.datasource.url=jdbc:h2:mem:customer
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2/customer
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
